--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <footer class="footer">
       <p class="footer__copyright">© 2023. Тицкая Елена</p>
     </footer>
+    <script src="./script/constants.js"></script>
     <script src="./script/index.js"></script>
   </body>
 </html>
