--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
     <footer class="footer">
       <p class="footer__copyright">© 2023. Тицкая Елена</p>
     </footer>
-    <script src="./script/constants.js"></script>
-    <script src="./script/index.js"></script>
-    <script src="./script/validate.js"></script>
+    <script type="module" src="./script/FormValidator.js"></script>
+    <script type="module" src="./script/Card.js"></script>
+    <script type="module" src="./script/constants.js"></script>
+    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./script/validate.js"></script>
   </body>
 </html>
