done create work 7

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" id="form" name="form-profile" novalidate>
+        <form class="popup__form" id="form_type_profile" name="form-profile" novalidate>
           <div class="popup__wrapper">
           <input
             required
@@ -120,6 +120,6 @@
     <script type="module" src="./script/Card.js"></script>
     <script type="module" src="./script/constants.js"></script>
     <script type="module" src="./script/index.js"></script>
-    <script type="module" src="./script/validate.js"></script>
+    <!--<script type="module" src="./script/validate.js"></script>-->
   </body>
 </html>
