--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    
   </head>
   <!---->
   <body class="page">
@@ -16,7 +15,6 @@
         <div class="profile__avatar">
           <button type="button" class="profile__avatar-edit">
             <img class="profile__avatar-image" src="#" alt="аватар пользователя">
-            </img>
           </button>
         </div>
         <div class="profile__info">
@@ -127,8 +125,8 @@
         <h2 class="popup__title popup__title_confirm">Вы уверены?</h2>
         <button type="submit" class="popup__submit-btn popup__submit-btn_type_confirm">Да</button>
         <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_confirm"></button>
+      </div>
       </form>
-    </div>
     </section>
     <section class="popup popup_type_avatar">
       <div class="popup__avatar">
@@ -137,7 +135,7 @@
           <div class="popup__wrapper">
           <input
             required
-            id="link"
+            id="link_avatar"
             type="url"
             placeholder="Ссылка на картинку"
             name="avatar"
