--- a/src/index.html
+++ b/src/index.html
@@ -135,13 +135,13 @@
           <div class="popup__wrapper">
           <input
             required
-            id="link_avatar"
+            id="avatar"
             type="url"
             placeholder="Ссылка на картинку"
             name="avatar"
             class="popup__text  popup__text_type_avatar"
           />
-          <span id='link-error' class="popup__error link-error"></span>
+          <span id='avatar-error' class="popup__error avatar-error"></span>
           </div>
           <button type="submit" class="popup__submit-btn popup__submit-btn_type_avatar">Сохранить</button>
           <button type="button" aria-label="Закрыть" class="popup__close popup__close_type_avatar"></button>
